; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_sdio.c_is_trailer_only_msg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_sdio.c_is_trailer_only_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath10k_sdio_rx_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }
%struct.ath10k_htc_hdr = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath10k_sdio_rx_data*)* @is_trailer_only_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_trailer_only_msg(%struct.ath10k_sdio_rx_data* %0) #0 {
  %2 = alloca %struct.ath10k_sdio_rx_data*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ath10k_htc_hdr*, align 8
  %5 = alloca i64, align 8
  store %struct.ath10k_sdio_rx_data* %0, %struct.ath10k_sdio_rx_data** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = load %struct.ath10k_sdio_rx_data*, %struct.ath10k_sdio_rx_data** %2, align 8
  %7 = getelementptr inbounds %struct.ath10k_sdio_rx_data, %struct.ath10k_sdio_rx_data* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.ath10k_htc_hdr*
  store %struct.ath10k_htc_hdr* %11, %struct.ath10k_htc_hdr** %4, align 8
  %12 = load %struct.ath10k_htc_hdr*, %struct.ath10k_htc_hdr** %4, align 8
  %13 = getelementptr inbounds %struct.ath10k_htc_hdr, %struct.ath10k_htc_hdr* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = call i64 @__le16_to_cpu(i32 %14)
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load %struct.ath10k_htc_hdr*, %struct.ath10k_htc_hdr** %4, align 8
  %18 = getelementptr inbounds %struct.ath10k_htc_hdr, %struct.ath10k_htc_hdr* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %16, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  store i32 1, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %1
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @__le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
